_sass/about.scss
div#intro {

  > img {
	float: left;
	width: 25%;
	border-radius: 20px;
	margin-right: 20px;
  }

  > h1 {
	color: lightgray;
	font-weight: normal;
	margin-bottom: 0;

	a {
	  color: white;
	  font-weight: bold;
	  text-decoration: none;

	  &:hover {
		text-decoration: underline;
	  }
	}
  }
}

#biography {
  overflow: hidden;
  margin-top: 20px;

  > p {
	margin-top: 0;
  }
}

/* Mobile */
@media only screen and (max-width: 480pt) {
  div#intro > img {
	display: block;
	float: none;
	width: 60%;
	margin: 0 auto 0 auto;
  }
}

